--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,20 +22,10 @@ body {
 
 .neon {
   font-family: neon;
-  color: $c-salmon;
+  color: $c-cinnabar;
   font-size: $s-xxl;
-  text-shadow: 0 0 $s-l #F40A35;
+  text-shadow: 0 0 $s-l lighten($c-cinnabar, 10%);
   animation: neon 1s ease infinite;
-}
-
-@keyframes neon {
-  0%,
-  100% {
-    text-shadow: 0 0 1vw #FA1C16, 0 0 .2vw #FED128;
-  }
-  50% {
-    text-shadow: 0 0 1.5vw #800E0B,0 0 .2vw #800E0B;
-  }
 }
 
 @keyframes moveDown {
@@ -43,6 +33,19 @@ body {
     transform: translateY(0px) scale(1.2);
   }
   100% {
-    transform: translateY(-24px) scale(1.2);
+    transform: translateY(-37px) scale(1.2);
+  }
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
   }
 }
