--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -7,11 +7,14 @@ $c-dusty-gray: rgb(155,155,155);
 $c-silver: rgb(220, 220, 220);
 $c-white: #ffffff;
 
-$c-salmon: #ff7676;
-$c-violet-red: rgb(247, 70, 138);
+$c-cinnabar: #E53935;
+$c-mandy: #e35d5b;
+$c-riptide: #81e6d9;
+$c-bright-turquoise: #00ffcb;
+$c-viking: #4FD1C5;
 $c-eastern-blue: #18A5A7;
 $c-snowy-mint: #BFFFC7;
-$c-martinique: #32325D;
 $c-san-juan-blue: #344675;
 
 $c-eastern-snow-gradient: linear-gradient(45deg, $c-eastern-blue 0%, $c-snowy-mint 100%);
+$c-passion-gradient: linear-gradient(90deg, $c-cinnabar 0%, $c-mandy 100%);
